--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pioneer Technology: Leave Management Application</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="dist/main-component/_styles/main.component.css" rel="stylesheet" />
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <!--<link href="app/app.component.css" rel="stylesheet" />-->
 
