add register route guard

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!--<link href="app/app.component.css" rel="stylesheet" />-->
 
     <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <!--<script src="node_modules/core-js/client/shim.min.js"></script>-->
 
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="node_modules/redux/dist/redux.js"></script>
+    <!--<script src="node_modules/redux/dist/redux.js"></script>-->
     <!-- Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
