--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <base href="/">
-    <title>Pioneer Technology: Leave Management Application</title>
+    <title>H-Days: Leave Management System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="dist/main-component/_styles/main.component.css" rel="stylesheet" />
