--- a/src/dashboard/company-dashboard/_templates/company.dashboard.html
+++ b/src/dashboard/company-dashboard/_templates/company.dashboard.html
@@ -1,25 +1,17 @@
 <div class="company_dashboard">
     <div class="company_dashboard_sidebar">
         <div class="company_dashboard_sidebar_content" [ngStyle]="{'width': getSidebarWidth()+'px'}">
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+            <a *ngIf="sideBarToggled" href="#">About</a>
+            <a *ngIf="sideBarToggled" href="#">Services</a>
+            <a *ngIf="sideBarToggled" href="#">Clients</a>
+            <a *ngIf="sideBarToggled" href="#">Contact</a>
         </div>
-        <button *ngIf="sideBarToggled" class="company_dashboard_sidebar_openclose_button"
-            [ngClass]="{'sidebar_toggled': sideBarToggled }"
+        <button class="company_dashboard_sidebar_openclose_button"
+            [ngClass]="{'sidebar_toggled': sideBarToggled, 'sidebar_collapsed': !sideBarToggled }"
             (click)="toggleSideBar()">
-            &times;
+            {{sideBarToggled ? '&times;' : '&#9776;'}}
         </button>
-
-        <button *ngIf="!sideBarToggled" class="company_dashboard_sidebar_openclose_button" 
-            [ngClass]="{'sidebar_collapsed': !sideBarToggled }"
-            (click)="toggleSideBar()">
-            &#9776;
-        </button>
-        <!--<span class="company_dashboard_sidebar_open" style="font-size:30px;cursor:pointer">&#9776;</span>-->
     </div>
 
     <div class="company_dashboard_content"></div>
-    <!--<button style="margin-lef: 300px" (click)="toggleSideBar()"> &#9776;</button>-->
 </div>
